<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="46dp"
        android:text="@string/grabar_audio"
        android:textAlignment="center"
        android:textColor="#F8FAF6"
        android:textColorHighlight="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/txtF"
        android:layout_width="205dp"
        android:layout_height="65dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtf"
        android:inputType="textPersonName"
        android:textColor="#F8FAF6"
        android:textColorHint="#F8FAF6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bFecha"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#3D7101"
        android:text="@string/bfecha"
        android:textColor="#F8FAF6"
        android:textColorHint="#F8FAF6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtH"
        android:layout_width="204dp"
        android:layout_height="64dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txth"
        android:inputType="textPersonName"
        android:textColor="#F8FAF6"
        android:textColorHint="#F8FAF6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/txtF"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/bHora"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="#3D7101"
        android:text="@string/bhora"
        android:textColor="#F8FAF6"
        android:textColorHint="#F8FAF6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bFecha"
        app:layout_constraintVertical_bias="0.347" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <Button
        android:id="@+id/bAlarma"
        android:layout_width="422dp"
        android:layout_height="119dp"
        android:backgroundTint="#3D7101"
        android:text="@string/balarma"
        android:textColor="#F6F4F4"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bRec"
        android:layout_width="178dp"
        android:layout_height="163dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/stop_rec"
        android:text="@string/rec_audio"
        android:textColor="#235525"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bAlarma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>