<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".OirNotificacionActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="361dp"
        android:layout_height="55dp"
        android:text="@string/txt_reproducir"
        android:textAlignment="center"
        android:textColor="#F8FAF6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="408dp"
        android:layout_height="182dp"
        android:background="@drawable/android"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <Button
        android:id="@+id/bReproducir"
        android:layout_width="167dp"
        android:layout_height="153dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/reproducir"
        android:text="@string/reproducir"
        android:textColor="#235525"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>